configured the mail utility

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 JWT_SECRET =yoursecret
  JWT_EXPIRY= 7d
- MONGODB_URL: mongodburlhere
+ MONGODB_URL = mongodburlhere
  PORT = 4000
+ SMTP_MAIL_HOST= firstvalue,
+ SMTP_MAIL_USERNAME= secondvalue,
+ SMTP_MAIL_PASSWORD= thirdvalue,
+ SMTP_MAIL_PORT= fourthvalue
