uploading and deletin image

--- a/.env
+++ b/.env
@@ -5,4 +5,9 @@ JWT_SECRET =yoursecret
  SMTP_MAIL_HOST= firstvalue,
  SMTP_MAIL_USERNAME= secondvalue,
  SMTP_MAIL_PASSWORD= thirdvalue,
- SMTP_MAIL_PORT= fourthvalue
+ SMTP_MAIL_PORT= fourthvalue,
+ S3_ACCESS_KEY = youraccesskey,
+ S3_SECRET_KEY = yoursecretkey ,
+ S3_REGION= yourregion,
+ S3_BUCKET_NAME= yourbucketname
+  
