razor pay payments

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ JWT_SECRET =yoursecret
  S3_ACCESS_KEY = youraccesskey,
  S3_SECRET_KEY = yoursecretkey ,
  S3_REGION= yourregion,
- S3_BUCKET_NAME= yourbucketname
-  
+ S3_BUCKET_NAME= yourbucketname,
+ RAZORPAY_KEY_ID = razorpayidhere,
+  RAZORPAY_SECRET_KEY = razorpaysecrethere
