--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "razorpay": "^2.9.3"
   }
 }
